implement IRegistryOptions#getColorMap